syntax = "proto3";

option csharp_namespace = "GrpcService1";

package item;

service ItemGrpc {
  rpc GetUserItems (GetUserItemsRequest) returns (GetUserItemsResponse);
  rpc GetChestItems (GetChestItemsRequest) returns (GetChestItemsResponse);
  rpc SellItem (SellItemRequest) returns (SellItemResponse);
}

//Request, Response
message GetUserItemsRequest {
  int32 user_id = 1;
}

message GetChestItemsRequest {
  int32 chest_id = 1;
}

message GetUserItemsResponse {
  repeated UserItemDto Items = 1;
}

message GetChestItemsResponse {
  repeated ItemDto Items = 1;
}

message SellItemRequest {
  int32 user_id = 1;
  int32 user_Item_id = 2;
}

message SellItemResponse {
  bool success = 1;
  double new_balance = 2;
}

// DTO
message ItemDto {
  int32 id = 1;
  string name = 2;
  double value = 3;
  string imageUrl = 4;
}

message UserItemDto {
  int32 id = 1;
  ItemDto Item = 2;
}